--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,18 @@ jobs:
       run: zip -r ./bokbokbook.zip ./deploy
       shell: bash
 
+# appspec.yml 파일 복사
+    - name: Copy appspec.yml
+      run: cp appspec.yml ./deploy
+
+    # script files 복사
+    - name: Copy script
+      run: cp ./scripts/*.sh ./deploy
+
+    - name: Make zip file
+      run: zip -r ./bokbokbook.zip ./deploy
+      shell: bash
+      
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -43,3 +55,16 @@ jobs:
 
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./bokbokbook.zip s3://bokbokbook/
+
+      # Deploy
+    - name: Deploy
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+        aws deploy create-deployment \
+        --application-name bokbokbook\
+        --deployment-group-name bokbokbook-group \
+        --file-exists-behavior OVERWRITE \
+        --s3-location bucket=bokbokbook,bundleType=zip,key=bokbokbook.zip \ 
+        --region ap-northeast-2
