--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,10 +40,7 @@ jobs:
 
     - name: Create .env file
       run: |
-        echo "DB_URL=${{ secrets.DB_URL }}" > ./deploy/.env
-        echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> ./deploy/.env
-        echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> ./deploy/.env
-        echo "BOOK_API_KEY=${{ secrets.BOOK_API_KEY }}" >> ./deploy/.env
+        printf 'DB_URL=%s\nDB_USERNAME=%s\nDB_PASSWORD=%s\nBOOK_API_KEY=%s\n' "${{ secrets.DB_URL }}" "${{ secrets.DB_USERNAME }}" "${{ secrets.DB_PASSWORD }}" "${{ secrets.BOOK_API_KEY }}" > ./deploy/.env
         
     - name: Make zip file
       run: zip -r ./bokbokbook.zip ./deploy
